src/manipulator/snapshots/annatto__manipulator__diff__tests__diff.snap
---
source: src/manipulator/diff.rs
expression: actual.unwrap()
---
---- diff.graphml:
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="SPK0::abbreviation" attr.type="string"/>
    <key id="k2" for="node" attr.name="dipl::dipl" attr.type="string"/>
    <key id="k3" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k4" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k6" for="node" attr.name="norm::norm" attr.type="string"/>
    <key id="k7" for="node" attr.name="diff::op" attr.type="string"/>
    <key id="k8" for="node" attr.name="annis::tok" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
# configure visualizations here
]]></data>
        <node id="diff">
            <data key="k5">corpus</data>
        </node>
        <node id="diff/a">
            <data key="k5">corpus</data>
        </node>
        <node id="diff/a/test">
            <data key="k1">dipl</data>
            <data key="k3">test</data>
            <data key="k5">corpus</data>
        </node>
        <node id="diff/b">
            <data key="k5">corpus</data>
        </node>
        <node id="diff/b/test">
            <data key="k1">norm</data>
            <data key="k3">test</data>
            <data key="k5">corpus</data>
        </node>
        <node id="diff/a/test#T0">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T1">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T2">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T3">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T4">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T5">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T6">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#T7">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/a/test#t_SPK0_T0-T1">
            <data key="k2">Das</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k8">Das</data>
        </node>
        <node id="diff/a/test#t_SPK0_T1-T2">
            <data key="k2">war</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k8">war</data>
        </node>
        <node id="diff/a/test#t_SPK0_T2-T3">
            <data key="k2">ein</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k8">ein</data>
        </node>
        <node id="diff/a/test#t_SPK0_T3-T4">
            <data key="k2">Test</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k8">Test</data>
        </node>
        <node id="diff/a/test#t_SPK0_T4-T5">
            <data key="k2">ohne</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k7">-</data>
            <data key="k8">ohne</data>
        </node>
        <node id="diff/a/test#t_SPK0_T5-T6">
            <data key="k2">Sinn</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k7">-</data>
            <data key="k8">Sinn</data>
        </node>
        <node id="diff/a/test#t_SPK0_T6-T7">
            <data key="k2">.</data>
            <data key="k4">dipl</data>
            <data key="k5">node</data>
            <data key="k8">.</data>
        </node>
        <node id="diff/b/test#T0">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#T1">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#T2">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#T3">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#T4">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#T5">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#T6">
            <data key="k5">node</data>
            <data key="k8"> </data>
        </node>
        <node id="diff/b/test#t_SPK0_T0-T1">
            <data key="k4">norm</data>
            <data key="k5">node</data>
            <data key="k6">Das</data>
            <data key="k8">Das</data>
        </node>
        <node id="diff/b/test#t_SPK0_T1-T2">
            <data key="k4">norm</data>
            <data key="k5">node</data>
            <data key="k6">ist</data>
            <data key="k8">ist</data>
        </node>
        <node id="diff/b/test#t_SPK0_T2-T3">
            <data key="k4">norm</data>
            <data key="k5">node</data>
            <data key="k6">ein</data>
            <data key="k8">ein</data>
        </node>
        <node id="diff/b/test#t_SPK0_T3-T4">
            <data key="k4">norm</data>
            <data key="k5">node</data>
            <data key="k6">zweiter</data>
            <data key="k7">+</data>
            <data key="k8">zweiter</data>
        </node>
        <node id="diff/b/test#t_SPK0_T4-T5">
            <data key="k4">norm</data>
            <data key="k5">node</data>
            <data key="k6">Test</data>
            <data key="k8">Test</data>
        </node>
        <node id="diff/b/test#t_SPK0_T5-T6">
            <data key="k4">norm</data>
            <data key="k5">node</data>
            <data key="k6">.</data>
            <data key="k8">.</data>
        </node>
        <node id="diff/a/test#sub_1_1">
            <data key="k5">node</data>
            <data key="k7">sub</data>
        </node>
        <node id="diff/b/test#sub_1_1">
            <data key="k5">node</data>
            <data key="k7">sub</data>
        </node>
        <edge id="e0" source="diff/a/test#t_SPK0_T0-T1" target="diff/a/test#T0" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="diff/a/test#t_SPK0_T1-T2" target="diff/a/test#T1" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="diff/a/test#t_SPK0_T2-T3" target="diff/a/test#T2" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="diff/a/test#t_SPK0_T3-T4" target="diff/a/test#T3" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="diff/a/test#t_SPK0_T4-T5" target="diff/a/test#T4" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="diff/a/test#t_SPK0_T5-T6" target="diff/a/test#T5" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="diff/a/test#t_SPK0_T6-T7" target="diff/a/test#T6" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="diff/b/test#t_SPK0_T0-T1" target="diff/b/test#T0" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="diff/b/test#t_SPK0_T1-T2" target="diff/b/test#T1" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="diff/b/test#t_SPK0_T2-T3" target="diff/b/test#T2" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="diff/b/test#t_SPK0_T3-T4" target="diff/b/test#T3" label="Coverage/annis/">
        </edge>
        <edge id="e11" source="diff/b/test#t_SPK0_T4-T5" target="diff/b/test#T4" label="Coverage/annis/">
        </edge>
        <edge id="e12" source="diff/b/test#t_SPK0_T5-T6" target="diff/b/test#T5" label="Coverage/annis/">
        </edge>
        <edge id="e13" source="diff/a/test#sub_1_1" target="diff/a/test#t_SPK0_T1-T2" label="Coverage/annis/">
        </edge>
        <edge id="e14" source="diff/b/test#sub_1_1" target="diff/b/test#t_SPK0_T1-T2" label="Coverage/annis/">
        </edge>
        <edge id="e15" source="diff/a/test#t_SPK0_T0-T1" target="diff/b/test#t_SPK0_T0-T1" label="Pointing//diff">
            <data key="k7">=</data>
        </edge>
        <edge id="e16" source="diff/a/test#t_SPK0_T2-T3" target="diff/b/test#t_SPK0_T2-T3" label="Pointing//diff">
            <data key="k7">=</data>
        </edge>
        <edge id="e17" source="diff/a/test#t_SPK0_T3-T4" target="diff/b/test#t_SPK0_T4-T5" label="Pointing//diff">
            <data key="k7">=</data>
        </edge>
        <edge id="e18" source="diff/a/test#t_SPK0_T6-T7" target="diff/b/test#t_SPK0_T5-T6" label="Pointing//diff">
            <data key="k7">=</data>
        </edge>
        <edge id="e19" source="diff/a/test#sub_1_1" target="diff/b/test#sub_1_1" label="Pointing//diff">
            <data key="k7">sub</data>
        </edge>
        <edge id="e20" source="diff/a/test#T0" target="diff/a/test#T1" label="Ordering/annis/">
        </edge>
        <edge id="e21" source="diff/a/test#T1" target="diff/a/test#T2" label="Ordering/annis/">
        </edge>
        <edge id="e22" source="diff/a/test#T2" target="diff/a/test#T3" label="Ordering/annis/">
        </edge>
        <edge id="e23" source="diff/a/test#T3" target="diff/a/test#T4" label="Ordering/annis/">
        </edge>
        <edge id="e24" source="diff/a/test#T4" target="diff/a/test#T5" label="Ordering/annis/">
        </edge>
        <edge id="e25" source="diff/a/test#T5" target="diff/a/test#T6" label="Ordering/annis/">
        </edge>
        <edge id="e26" source="diff/a/test#T6" target="diff/a/test#T7" label="Ordering/annis/">
        </edge>
        <edge id="e27" source="diff/b/test#T0" target="diff/b/test#T1" label="Ordering/annis/">
        </edge>
        <edge id="e28" source="diff/b/test#T1" target="diff/b/test#T2" label="Ordering/annis/">
        </edge>
        <edge id="e29" source="diff/b/test#T2" target="diff/b/test#T3" label="Ordering/annis/">
        </edge>
        <edge id="e30" source="diff/b/test#T3" target="diff/b/test#T4" label="Ordering/annis/">
        </edge>
        <edge id="e31" source="diff/b/test#T4" target="diff/b/test#T5" label="Ordering/annis/">
        </edge>
        <edge id="e32" source="diff/b/test#T5" target="diff/b/test#T6" label="Ordering/annis/">
        </edge>
        <edge id="e33" source="diff/a/test#t_SPK0_T0-T1" target="diff/a/test#t_SPK0_T1-T2" label="Ordering/annis/dipl">
        </edge>
        <edge id="e34" source="diff/a/test#t_SPK0_T1-T2" target="diff/a/test#t_SPK0_T2-T3" label="Ordering/annis/dipl">
        </edge>
        <edge id="e35" source="diff/a/test#t_SPK0_T2-T3" target="diff/a/test#t_SPK0_T3-T4" label="Ordering/annis/dipl">
        </edge>
        <edge id="e36" source="diff/a/test#t_SPK0_T3-T4" target="diff/a/test#t_SPK0_T4-T5" label="Ordering/annis/dipl">
        </edge>
        <edge id="e37" source="diff/a/test#t_SPK0_T4-T5" target="diff/a/test#t_SPK0_T5-T6" label="Ordering/annis/dipl">
        </edge>
        <edge id="e38" source="diff/a/test#t_SPK0_T5-T6" target="diff/a/test#t_SPK0_T6-T7" label="Ordering/annis/dipl">
        </edge>
        <edge id="e39" source="diff/b/test#t_SPK0_T0-T1" target="diff/b/test#t_SPK0_T1-T2" label="Ordering/annis/norm">
        </edge>
        <edge id="e40" source="diff/b/test#t_SPK0_T1-T2" target="diff/b/test#t_SPK0_T2-T3" label="Ordering/annis/norm">
        </edge>
        <edge id="e41" source="diff/b/test#t_SPK0_T2-T3" target="diff/b/test#t_SPK0_T3-T4" label="Ordering/annis/norm">
        </edge>
        <edge id="e42" source="diff/b/test#t_SPK0_T3-T4" target="diff/b/test#t_SPK0_T4-T5" label="Ordering/annis/norm">
        </edge>
        <edge id="e43" source="diff/b/test#t_SPK0_T4-T5" target="diff/b/test#t_SPK0_T5-T6" label="Ordering/annis/norm">
        </edge>
        <edge id="e44" source="diff/a" target="diff" label="PartOf/annis/">
        </edge>
        <edge id="e45" source="diff/a/test" target="diff/a" label="PartOf/annis/">
        </edge>
        <edge id="e46" source="diff/b" target="diff" label="PartOf/annis/">
        </edge>
        <edge id="e47" source="diff/b/test" target="diff/b" label="PartOf/annis/">
        </edge>
        <edge id="e48" source="diff/a/test#T0" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e49" source="diff/a/test#T1" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e50" source="diff/a/test#T2" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e51" source="diff/a/test#T3" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e52" source="diff/a/test#T4" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e53" source="diff/a/test#T5" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e54" source="diff/a/test#T6" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e55" source="diff/a/test#T7" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e56" source="diff/a/test#t_SPK0_T0-T1" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e57" source="diff/a/test#t_SPK0_T1-T2" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e58" source="diff/a/test#t_SPK0_T2-T3" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e59" source="diff/a/test#t_SPK0_T3-T4" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e60" source="diff/a/test#t_SPK0_T4-T5" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e61" source="diff/a/test#t_SPK0_T5-T6" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e62" source="diff/a/test#t_SPK0_T6-T7" target="diff/a/test" label="PartOf/annis/">
        </edge>
        <edge id="e63" source="diff/b/test#T0" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e64" source="diff/b/test#T1" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e65" source="diff/b/test#T2" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e66" source="diff/b/test#T3" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e67" source="diff/b/test#T4" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e68" source="diff/b/test#T5" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e69" source="diff/b/test#T6" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e70" source="diff/b/test#t_SPK0_T0-T1" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e71" source="diff/b/test#t_SPK0_T1-T2" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e72" source="diff/b/test#t_SPK0_T2-T3" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e73" source="diff/b/test#t_SPK0_T3-T4" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e74" source="diff/b/test#t_SPK0_T4-T5" target="diff/b/test" label="PartOf/annis/">
        </edge>
        <edge id="e75" source="diff/b/test#t_SPK0_T5-T6" target="diff/b/test" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
